Bump to Java 21 and also update libs;